kubernetes/services/hcaptcha/hcaptcha/website.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hcaptcha-terah-dev
  namespace: hcaptcha
  labels:
    app: hcaptcha-terah-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hcaptcha-terah-dev
  template:
    metadata:
      labels:
        app: hcaptcha-terah-dev
    spec:
      containers:
        - name: http
          image: mcaptcha/mcaptcha:latest
          ports:
            - name: web
              containerPort: 80
