kubernetes/services/hcaptcha/hcaptcha/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hcaptcha-terah-dev
  namespace: hcaptcha
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: hcaptcha-terah-dev
